# abstractbox

./: .gitignore  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/: checks.yml
.github/workflows/: checks.yml
abstractbox/: __init__.py  configure.py  dependency.py  main.py  middleware.py
